fixed dashboard alignment

--- a/src/sharedstyles.css
+++ b/src/sharedstyles.css
@@ -1,4 +1,78 @@
+#map {
+  height: 100px;
+  position: inherit !important;
+}
 
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+
+.dropdownContent {
+  position: absolute;
+  min-width: 200px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  border-radius: 10px;
+  z-index: 1;
+  background-color: white;
+  transform: translate(-50%, 0);
+
+}
+
+.dropdownItem {
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.dropdownItem:hover {
+  text-decoration: none;
+  background: #9ED6AD;
+  color: black;
+  transition: .7s;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+}
+
+.navbar {
+  background-color: white;
+  border-radius: 10px;
+}
+
+#minimizableContent {
+}
+
+
+#dashboardContent {
+  display: flex;
+  align-items: center;
+}
+
+#allDashboardContent{
+  display: flex;
+  align-items: center;
+}
+
+/* .marginRight {
+  margin-right: 2px;
+} */
+
+.marginLeft {
+  margin-left: 120px;
+}
+
+.mini{
+  display:none;
+}
+
+.buttonImage {
+  /* height: 40px; */
+  width: 22px;
+  margin: 0 auto;
+}
 
 .modal{
   display: flex;
@@ -18,6 +92,9 @@
   z-index: 5;
   min-width: 300px;
   max-width: 350px;
+  margin-right: 10px;
+  text-transform: uppercase;
+  font-size: 10px;
 }
 
 .error {
@@ -27,6 +104,13 @@
 
 .floatRight{
   float: right;
+}
+
+.buttonCluster {
+  display: flex;
+  /* flex-direction: row-reverse; */
+  justify-content: space-between;
+  /* margin-top: 10px; */
 }
 
 .functionalButton{
@@ -71,6 +155,26 @@ input{
   border-radius: 5px;
 }
 
+.inputBox {
+  height: 40px;
+  background-color: #f5f5f5;
+  border: none;
+  padding-left: 10px;
+  /* min-width: 300px; */
+  color: #606060;
+  margin-right: 10px;
+}
+
+.miniLabel {
+  text-transform: uppercase;
+  font-size: 9px;
+  letter-spacing: 1px;
+  line-height: 0px;
+  text-align: left;
+  color: #a1a0a0;
+
+}
+
 .giveMeSpace{
   margin-top: 15px;
   margin-bottom: 10px;
@@ -90,8 +194,8 @@ input{
   pointer-events: none;
 }
 
-.minimize{
-  /* display: inline; */
+.minimize {
+  display: inline;
 }
 
 .modalLogo{
@@ -99,8 +203,16 @@ input{
   max-height: 40px;
 }
 
+#logoImage {
+  display: flex;
+  align-items: center;
+}
+
 #logo {
-  padding-top: 10px;
+  /* padding-top: 10px; */
+  width: 45px;
+  height: 45px;
+  padding-right: 10px;
 }
 
 #app {
@@ -109,6 +221,9 @@ input{
   -moz-osx-font-smoothing: grayscale; */
   text-align: center;
   color: #2c3e50;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 nav {
@@ -146,6 +261,7 @@ body {
   font-family: "Roboto", "sans-serif";
   line-height: 30px;
   cursor: move;
+  display: flex;
 }
 
 #goToLocationInput {
@@ -155,6 +271,7 @@ body {
   padding-left: 10px;
   min-width: 300px;
   color: #606060;
+  margin-right: 10px;
 }
 
 .form-control {
@@ -230,18 +347,165 @@ p {
 
 #infoPanel {
   text-align: left;
+  padding: 15px;
+}
+
+
+#toLocationInfo {
+  margin-bottom: 10px;
+}
+
+#fromLocationInfoReturn {
+  margin-bottom: 10px;
+}
+
+#toLocationInfoReturn {
+  margin-bottom: 10px;
+}
+
+#userName {
+  align-items: center;
+  color: #BAB9B9;
+}
+
+
+.likeImg {
+  height: 10px;
+  width: 10px;
+}
+
+.likeButton {
+  border: none;
+  background-color: white;
+  border-radius: 4px;
+  padding: 10px;
+  float: left
+}
+
+.editButton {
+  border: none;
+  background-color: white;
+  border-radius: 4px;
+  float: right;
+}
+
+.reviewInfo {
+  width: 100%;
+}
+
+.editButton:hover {
+  background-color: #a39dfb;
+}
+
+.likeButton:hover {
+  background-color: #158C8C;
+}
+
+.dislikeButton:hover {
+  background-color: #F05D20;
+}
+
+.active {
+  background-color: #a39dfb;
+}
+
+.activeDislike {
+  background-color: #F05D20;
+}
+
+.reviewInfo {
+  float: left;
+}
+
+h2 {
+  /* font-size: 24px; */
+  /* line-height: 24px; */
+  font-weight: 300;
+  margin: 0;
+}
+
+.timeDisplay {
+  display: flex;
+  flex-direction: column;
+  margin-right: 15px;
+}
+
+
+#outboundInfo {
+  flex: 50%; 
+  /* border-bottom: solid;  */
+  margin-bottom: 25px;
+}
+
+#returnInfo {
+  margin-bottom: 15px;
+}
+
+.popUpInfo {
+  display: flex;
+  background-color: #F5F5F5;
   padding: 10px;
 }
 
-#fromLocationInfo {
-  font-size: 24px;
-  /* text-align: left; */
+.timetableItem {
+  margin-right: 10px;
+  font-size: 22px;
 }
 
-#toLocationInfo {
+.gm-ui-hover-effect {
+  width: 40px!important;
+  height: 40px!important;
+}
 
+
+#profileButton {
+  display: flex!important;
+  align-items: center!important;
 }
 
 @media only screen and (max-width: 480px) {
+  #floating-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100%;
+    /* height: 200px; */
+    padding: 10px;
+    border: none;
+    text-align: left;
+    line-height: 30px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    border-radius: 0;
+  }
 
+  #dashboardContent {
+    flex-direction: column;
+  }
+
+  .functionalButton {
+    /* margin-bottom: 10px; */
+  }
+
+  .buttonCluster {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  #goToLocationButton {
+    margin-top: 10px;
+  }
+
+  #logo {
+    margin-bottom: 10px;
+  }
+
+  #app {
+    overflow: hidden;
+  }
 }
